--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = [
 dependencies = []
 requires-python = ">=3.7"
 license = {text = "MIT"}
+readme = "README.md"
+
 [tool.pdm]
 
 [build-system]
